@@ -1,3 +1,9 @@
+Wed Nov  3 21:56:52 CET 2010  John Tytgat  <John.Tytgat@aaug.net>
+
+	* area.c (c_entry): Fix test ENTRY being used without AREA specified.
+	* value.c, help_eval.c, main.c, symbol.c, symbol.h, commands.c,
+	storage.c: Minor tweeks.
+
 Tue Nov  2 22:39:16 CET 2010  John Tytgat  <John.Tytgat@aaug.net>
 
 	* input.c (Input_Match): Added and use this instead of
